--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-    "name": "cashify",
-    "version": "3.0.1",
+    "name": "cashify-es2017",
+    "version": "3.0.1forked",
     "description": "Lightweight currency conversion library, successor of money.js",
     "main": "dist/index.js",
-    "type": "module",
     "types": "dist/index.d.ts",
     "files": [
         "dist/**/*"
     ],
     "author": "Antoni Kępiński <antoni@kepinski.ch> (https://www.kepinski.ch)",
     "bugs": {
-        "url": "https://github.com/xxczaki/cashify/issues"
+        "url": "https://github.com/d2xdt2/cashify-es2017/issues"
     },
     "scripts": {
         "prebuild": "del-cli dist",
@@ -22,14 +21,15 @@
         "node": ">=14"
     },
     "license": "MIT",
-    "repository": "xxczaki/cashify",
-    "homepage": "https://github.com/xxczaki/cashify",
+    "repository": "d2xdt2/cashify-es2017",
+    "homepage": "https://github.com/d2xdt2/cashify-es2017",
     "funding": {
         "type": "opencollective",
         "url": "https://opencollective.com/cashify"
     },
     "keywords": [
         "cashify",
+        "cashify-es2017",
         "cash",
         "moneyjs",
         "money.js",
