--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,11 @@
 	"extends": "@sindresorhus/tsconfig",
 	"compilerOptions": {
 		"outDir": "dist",
-		"target": "es2020", // Node.js 14
-		"moduleResolution": "node",
+		"target": "ES2017",
+		"module": "CommonJS",
+		"moduleResolution": "Node",
 		"lib": [
-			"es2020"
+			"ES2017"
 		]
 	},
 	"include": [
